@@ -12,6 +12,7 @@ Mobius Forensic Toolkit 2.23
 	* libmobius_core: Added new method decoder::sgml::parser::get_minidom
 	* libmobius_core: Added new method database::new_select_statement (table_name, cols names)
 	* libmobius_core: Changed to load C++ extensions directly from data/extensions folder
+	* libmobius_framework: Changed function ant_impl_vfs_processor::run to create a new transaction
 	* libmobius_python: Added new function decoder::hexstring
 	* libmobius_python: Added new method decoder.sgml.parser.get_last
 	* pymobius.registry.user_accounts: Fixed error in TS_Property constructor
